Changes on <markup/>

--- a/examples/release-test/app/sections/forms.html
+++ b/examples/release-test/app/sections/forms.html
@@ -36,7 +36,7 @@
                         </select>
                     </label>
                 </li>
-                <li class="tip dark" data-icon="question mini">It's a special form element you must set the label with class "select"</li>
+                <li class="tip dark" data-icon="question small">It's a special form element you must set the label with class "select"</li>
             </ul>
         </div>
     </article>
@@ -53,7 +53,7 @@
                     <input type="time" placeholder="Some time..." />
                     <input type="month" placeholder="Some month..." />
                 </li>
-                <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
+                <li class="tip dark" data-icon="question small">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
         </div>
     </article>
@@ -83,9 +83,9 @@
         <div class="container indented">
             <ul class="form">
                 <li class="anchor">Examples of tips</li>
-                <li class="tip" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip dark" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip darker" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip dark" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip darker" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
 
                 <li class="tip" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
                 <li class="tip dark" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
