--- a/examples/release-test/index.html
+++ b/examples/release-test/index.html
@@ -75,54 +75,54 @@
                 <p class="text">In the listed examples you are seeing a attribute "data-icon", this attribute only need the semantic name of the icon you want to show and LungoJS will do the rest of the work.</p>
 
                 <ul>
-                    <li data-icon="map mini">map</li>
-                    <li data-icon="clock mini">clock</li>
-                    <li data-icon="calendar mini">calendar</li>
-                    <li data-icon="message mini">message</li>
-                    <li data-icon="chat mini">chat</li>
-                    <li data-icon="user mini">user</li>
-                    <li data-icon="group mini">group</li>
-                    <li data-icon="loading mini">loading</li>
-                    <li data-icon="refresh mini">refresh</li>
-                    <li data-icon="search mini">search</li>
-                    <li data-icon="pushpin mini">pushpin</li>
-                    <li data-icon="star mini">star</li>
-                    <li data-icon="heart mini">heart</li>
-                    <li data-icon="warning mini">warning</li>
-                    <li data-icon="add mini">add</li>
-                    <li data-icon="remove mini">remove</li>
-                    <li data-icon="question mini">question</li>
-                    <li data-icon="info mini">info</li>
-                    <li data-icon="check mini">check</li>
-                    <li data-icon="substract mini">substract</li>
-                    <li data-icon="close mini">close</li>
-                    <li data-icon="plus mini">plus</li>
-                    <li data-icon="up mini">up</li>
-                    <li data-icon="down mini">down</li>
-                    <li data-icon="left mini">left</li>
-                    <li data-icon="right mini">right</li>
-                    <li data-icon="home mini">home</li>
-                    <li data-icon="pencil mini">pencil</li>
-                    <li data-icon="edit mini">edit</li>
-                    <li data-icon="picture mini">picture</li>
-                    <li data-icon="camera mini">camera</li>
-                    <li data-icon="music mini">music</li>
-                    <li data-icon="wifi mini">wifi</li>
-                    <li data-icon="file mini">file</li>
-                    <li data-icon="files mini">files</li>
-                    <li data-icon="folder mini">folder</li>
-                    <li data-icon="key mini">key</li>
-                    <li data-icon="settings mini">settings</li>
-                    <li data-icon="chart mini">chart</li>
-                    <li data-icon="trash mini">trash</li>
-                    <li data-icon="target mini">target</li>
-                    <li data-icon="items mini">items</li>
-                    <li data-icon="download mini">download</li>
-                    <li data-icon="upload mini">upload</li>
-                    <li data-icon="basket mini">basket</li>
-                    <li data-icon="phone mini">phone</li>
-                    <li data-icon="mail mini">mail</li>
-                    <li data-icon="tag mini">tag</li>
+                    <li data-icon="map small">map</li>
+                    <li data-icon="clock small">clock</li>
+                    <li data-icon="calendar small">calendar</li>
+                    <li data-icon="message small">message</li>
+                    <li data-icon="chat small">chat</li>
+                    <li data-icon="user small">user</li>
+                    <li data-icon="group small">group</li>
+                    <li data-icon="loading small">loading</li>
+                    <li data-icon="refresh small">refresh</li>
+                    <li data-icon="search small">search</li>
+                    <li data-icon="pushpin small">pushpin</li>
+                    <li data-icon="star small">star</li>
+                    <li data-icon="heart small">heart</li>
+                    <li data-icon="warning small">warning</li>
+                    <li data-icon="add small">add</li>
+                    <li data-icon="remove small">remove</li>
+                    <li data-icon="question small">question</li>
+                    <li data-icon="info small">info</li>
+                    <li data-icon="check small">check</li>
+                    <li data-icon="substract small">substract</li>
+                    <li data-icon="close small">close</li>
+                    <li data-icon="plus small">plus</li>
+                    <li data-icon="up small">up</li>
+                    <li data-icon="down small">down</li>
+                    <li data-icon="left small">left</li>
+                    <li data-icon="right small">right</li>
+                    <li data-icon="home small">home</li>
+                    <li data-icon="pencil small">pencil</li>
+                    <li data-icon="edit small">edit</li>
+                    <li data-icon="picture small">picture</li>
+                    <li data-icon="camera small">camera</li>
+                    <li data-icon="music small">music</li>
+                    <li data-icon="wifi small">wifi</li>
+                    <li data-icon="file small">file</li>
+                    <li data-icon="files small">files</li>
+                    <li data-icon="folder small">folder</li>
+                    <li data-icon="key small">key</li>
+                    <li data-icon="settings small">settings</li>
+                    <li data-icon="chart small">chart</li>
+                    <li data-icon="trash small">trash</li>
+                    <li data-icon="target small">target</li>
+                    <li data-icon="items small">items</li>
+                    <li data-icon="download small">download</li>
+                    <li data-icon="upload small">upload</li>
+                    <li data-icon="basket small">basket</li>
+                    <li data-icon="phone small">phone</li>
+                    <li data-icon="mail small">mail</li>
+                    <li data-icon="tag small">tag</li>
                 </ul>
             </div>
         </article>
