--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -41,7 +41,8 @@
     <section id="test-1" class="pop">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user" data-count="3"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user" data-count="23"></a>
             </nav>
             <div class="onleft">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
@@ -62,7 +63,7 @@
             <nav>
                 <a href="#nav-1" data-target="article"  data-icon="clock" data-label="Alarm"></a>
                 <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17" data-label="Calendar"></a>
-                <a href="#nav-3" data-target="article" class="current" data-icon="mail" data-label="Emails" data-count="124"></a>
+                <a href="#nav-3" data-target="article" class="current" data-icon="mail" data-label="Emails" data-count="1"></a>
                 <a href="#nav-4" data-target="article" data-icon="phone" data-label="Calls" data-count="12"></a>
             </nav>
         </footer>
@@ -119,14 +120,14 @@
             </ul>
             <ul>
                 <li class="tip theme">Examples of tips</li>
-                <li class="tip" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip dark" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip dark" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
 
                 <li class="tip" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
                 <li class="tip dark" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
 
 
-                <li class="tip dark" data-icon="question mini">It's a special form element you must set the label with class "select"</li>
+                <li class="tip dark" data-icon="question small">It's a special form element you must set the label with class "select"</li>
             </ul>
         </article>
 
