--- a/examples/todo.js/index.html
+++ b/examples/todo.js/index.html
@@ -28,7 +28,8 @@
     <section id="login">
         <article class="splash indented">
             <div>
-                <h1>ToDo.<span class="semi-opacity">js<span></h1>
+                <h1>ToDo.<span }
+>js<span></h1>
                 <input type="text" placeholder="Type your user" />
                 <input type="password" placeholder="Type your password" />
                 <a href="#" id="btnLogin" class="button big" data-icon="key">Test Demo!</a>
@@ -66,7 +67,7 @@
         </header>
         <article class="list indented">
             <ul class="form">
-                <li class="tip dark" data-icon="pencil mini">Edit ToDo</li>
+                <li class="tip dark" data-icon="pencil small">Edit ToDo</li>
                 <li class="dark">
                     <label>Name</label>
                     <input type="text" id="txtEditName" placeholder="Input text"/>
