--- a/examples/test/app/sections/forms.html
+++ b/examples/test/app/sections/forms.html
@@ -37,7 +37,7 @@
                         </select>
                     </label>
                 </li>
-                <li class="tip dark" data-icon="question mini">It's a special form element you must set the label with class "select"</li>
+                <li class="tip dark" data-icon="question small">It's a special form element you must set the label with class "select"</li>
             </ul>
         </div>
     </article>
@@ -47,7 +47,7 @@
             <ul class="form">
                 <li class="anchor" data-icon="edit">Example of search</li>
                 <li data-search="Type a search..."></li>
-                <li class="tip darker" data-icon="question mini">It's a special form element you must set the attribute data-search="Placeholder text"</li>
+                <li class="tip darker" data-icon="question small">It's a special form element you must set the attribute data-search="Placeholder text"</li>
                 <li class="anchor" data-icon="edit">Example of type="*"</li>
                 <li>
                     <input type="datetime" placeholder="Some datetime..." />
@@ -55,7 +55,7 @@
                     <input type="time" placeholder="Some time..." />
                     <input type="month" placeholder="Some month..." />
                 </li>
-                <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
+                <li class="tip dark" data-icon="question small">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
         </div>
     </article>
@@ -67,7 +67,7 @@
                 <li data-progress="0%"></li>
                 <li class="anchor" data-icon="edit">Example of range</li>
                 <li> <input type="range"></li>
-                <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
+                <li class="tip dark" data-icon="question small">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
         </div>
     </article>
@@ -97,9 +97,9 @@
         <div class="container indented">
             <ul class="form">
                 <li class="anchor">Examples of tips</li>
-                <li class="tip" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip dark" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip darker" data-icon="home mini">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip dark" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="tip darker" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
 
                 <li class="tip" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
                 <li class="tip dark" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
