Testing classes on list

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -143,7 +143,14 @@
             </div>
         </article>
 
-        <article id="nav-4"></article>
+        <article id="nav-4" class="list">
+            <ul>
+                <li class="red">hola</li>
+                <li class="green">hola</li>
+                <li class="blue">hola</li>
+            </ul>
+
+        </article>
     </section>
 
 
