--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -44,8 +44,8 @@
     <section id="test-1" class="pop">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user" data-count="3"></a>
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user" data-count="23"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="heart" data-count="8"></a>
             </nav>
             <div class="onleft">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
@@ -86,6 +86,8 @@
             <div class="container">
                 <textarea class="big" placeholder='aosidaioda'></textarea>
             </div>
+            <a href="#test-2" data-target="section" class="button big red">next section</a>
+            <a href="#test-1" data-target="section" class="button big blue">current section</a>
         </article>
 
         <article id="nav-1" class="list indented scrollable">
@@ -179,6 +181,7 @@
     <script src="../../src/Lungo.Dom.js"></script>
     <script src="../../src/Lungo.Service.js"></script>
     <script src="../../src/Lungo.Constants.js"></script>
+    <script src="../../src/Lungo.Element.js"></script>
     <script src="../../src/router/Lungo.Router.js"></script>
     <script src="../../src/router/Lungo.Router.History.js" ></script>
     <script src="../../src/view/Lungo.View.Resize.js"></script>
