Perfomance in DOM Handler

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -45,7 +45,7 @@
         <header class="extended">
             <nav class="onleft">
                 <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="heart" data-count="8"></a>
+                <a href="#kitchen-sink-scroll" data-article="nav-2" data-target="aside" data-icon="heart" data-count="8"></a>
             </nav>
             <div class="onleft">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
@@ -64,10 +64,10 @@
 
         <footer class="toolbar with-labels">
             <nav>
-                <a href="#nav-1" data-target="article"  data-icon="clock" data-label="Alarm"></a>
-                <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17" data-label="Calendar"></a>
-                <a href="#nav-3" data-target="article" class="current" data-icon="mail" data-label="Emails" data-count="1"></a>
-                <a href="#nav-4" data-target="article" data-icon="phone" data-label="Calls" data-count="12"></a>
+                <a href="#nav-1" data-target="article" data-title="a" data-icon="clock" data-label="Alarm"></a>
+                <a href="#nav-2" data-target="article" data-title="b" data-icon="calendar" data-count="17" data-label="Calendar"></a>
+                <a href="#nav-3" data-target="article" data-title="c" class="current" data-icon="mail" data-label="Emails" data-count="1"></a>
+                <a href="#nav-4" data-target="article" data-title="d" data-icon="phone" data-label="Calls" data-count="12"></a>
             </nav>
         </footer>
 
