--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,5 +1,5 @@
-<aside id="kitchen-sink-scroll" class="scrollable  small">
-    <div>
+<aside id="kitchen-sink-scroll" class="scroll small">
+    <ul>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
         <a href="#nav-2" data-target="article" data-icon="calendar"></a>
         <a href="#test-2" data-target="section" data-icon="plus" data-count="14"></a>
@@ -9,33 +9,11 @@
         <a href="#lists" data-target="section" data-icon="items" data-count="5"></a>
         <a href="#events" data-target="article" data-icon="user"></a>
         <a href="#scrolls" data-target="article" data-icon="down"></a>
-    </div>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+    </ul>
 </aside>
-
-<!--
-<aside id="kitchen-sink-scroll" class="scrollable current">
-    <div>
-        <div class="title">Select a option</div>
-        <a href="#nav-1" data-target="article" class="current" data-icon="clock">Alarm</a>
-        <a href="#nav-2" data-target="article" data-icon="calendar">Calendar</a>
-        <a href="#test-2" data-target="section" data-icon="plus" data-count="14">Buttons & Colours</a>
-        <a href="#icons" data-target="article" data-icon="picture" data-count="94">Icons</a>
-        <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6">Data Attributes</a>
-        <a href="#forms" data-target="section" data-icon="edit" data-count="7">Form Elements</a>
-        <a href="#lists" data-target="section" data-icon="items" data-count="5">Lists</a>
-        <a href="#events" data-target="article" data-icon="user">Events</a>
-        <a href="#scrolls" data-target="article" data-icon="down">Scrolls</a>
-        <a href="#urls" data-target="article" data-icon="down">URL Scheme Reference</a>
-        <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
-        <a href="#navigation" data-target="section" data-icon="map">Navigation</a>
-        <a href="#buttons" data-target="article" data-icon="plus" data-count="14">Buttons & Colours</a>
-        <a href="#icons" data-target="article" data-icon="picture" data-count="94">Icons</a>
-        <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6">Data Attributes</a>
-        <a href="#forms" data-target="section" data-icon="edit" data-count="7">Form Elements</a>
-        <a href="#lists" data-target="section" data-icon="items" data-count="5">Lists</a>
-        <a href="#events" data-target="article" data-icon="user">Events</a>
-        <a href="#scrolls" data-target="article" data-icon="down">Scrolls</a>
-        <a href="#urls" data-target="article" data-icon="down">URL Scheme Reference</a>
-    </div>
-</aside>
--->
