Remove any reference of View.Scroll Namespace

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -89,9 +89,9 @@
             </div>
             <div id = "prueba" class="box middle list scroll ">
             <ul>
-                <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li>
-                 <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li>
-                  <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li> <li data-image="1://mobilehtml5.org/img/232x321xlogo.png.pagespeed.ic.CB96-XanN6.png"><strong>ask</strong><small>sak</small></li>
+                <li data-image=""><strong>ask</strong><small>sak</small></li>
+                 <li data-image=""><strong>ask</strong><small>sak</small></li>
+                  <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li> <li data-image=""><strong>ask</strong><small>sak</small></li>
             </ul>
             </div>
 
@@ -195,7 +195,6 @@
 
     <!-- Third parties dependencies -->
     <script src="../../src/lib/QuoJS.js"></script>
-    <!--<script src="../../src/lib/iscroll-lite.js"></script>-->
     <!-- LungoJS Libraries (Development mode)-->
     <script src="../../src/Lungo.js"></script>
     <script src="../../src/Lungo.App.js" ></script>
@@ -209,7 +208,6 @@
     <script src="../../src/view/Lungo.View.Resize.js"></script>
     <script src="../../src/view/Lungo.View.Article.js" ></script>
     <script src="../../src/view/Lungo.View.Aside.js" ></script>
-    <!--<script src="../../src/view/Lungo.View.Scroll.js"></script>-->
     <script src="../../src/view/Lungo.View.Element.js"></script>
     <script src="../../src/view/Lungo.View.Template.js"></script>
     <script src="../../src/view/Lungo.View.Template.Binding.js"></script>
