New controller for aside element

--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,4 +1,4 @@
-<aside id="kitchen-sink-scroll" class="scroll small">
+<aside id="kitchen-sink-scroll" class=" small">
     <ul>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
         <a href="#nav-2" data-target="article" data-icon="calendar"></a>
@@ -6,14 +6,6 @@
         <a href="#icons" data-target="article" data-icon="picture" data-count="94"></a>
         <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6"></a>
         <a href="#forms" data-target="section" data-icon="edit" data-count="7"></a>
-        <a href="#lists" data-target="section" data-icon="items" data-count="5"></a>
-        <a href="#events" data-target="article" data-icon="user"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
-        <a href="#scrolls" data-target="article" data-icon="down"></a>
+        <a href="#lists" data-target="section" data-icon="items" data-count="15"></a>
     </ul>
 </aside>
